quick update ema

--- a/notebooks/Features - openSmile.ipynb
+++ b/notebooks/Features - openSmile.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bdda49ac",
+   "metadata": {},
+   "source": [
+    "## Procesar audio completo"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "417d9154",
@@ -12,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "553c0a2d",
    "metadata": {},
    "outputs": [],
@@ -1261,6 +1269,284 @@
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d37a0283",
+   "metadata": {},
+   "source": [
+    "## Procesar fragmento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3fc2ce5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import time\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import audiofile\n",
+    "import opensmile\n",
+    "\n",
+    "from src.dataload import load_audio_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "35d99d3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_annotations = pd.read_excel(\"data/annotations_2.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0f18ba69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data, timestamps, sr = load_audio_data(df_annotations, part_num = 2, audio_name = 'MSP-Conversation_0002.wav')\n",
+    "df_input = pd.DataFrame(data = np.stack([timestamps, data]).T, columns = ['Time','Data'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d9999727",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_frame = df_input[(df_input['Time'] >= 0) & (df_input['Time'] <= 2.5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "c4844b19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import opensmile\n",
+    "\n",
+    "smile = opensmile.Smile(\n",
+    "    feature_set=opensmile.FeatureSet.ComParE_2016,\n",
+    "    feature_level=opensmile.FeatureLevel.Functionals,\n",
+    ")\n",
+    "\n",
+    "y = smile.process_signal(\n",
+    "    signal = df_frame['Data'],\n",
+    "    sampling_rate = sr\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7c8fa9ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>audspec_lengthL1norm_sma_range</th>\n",
+       "      <th>audspec_lengthL1norm_sma_maxPos</th>\n",
+       "      <th>audspec_lengthL1norm_sma_minPos</th>\n",
+       "      <th>audspec_lengthL1norm_sma_quartile1</th>\n",
+       "      <th>audspec_lengthL1norm_sma_quartile2</th>\n",
+       "      <th>audspec_lengthL1norm_sma_quartile3</th>\n",
+       "      <th>audspec_lengthL1norm_sma_iqr1-2</th>\n",
+       "      <th>audspec_lengthL1norm_sma_iqr2-3</th>\n",
+       "      <th>audspec_lengthL1norm_sma_iqr1-3</th>\n",
+       "      <th>audspec_lengthL1norm_sma_percentile1.0</th>\n",
+       "      <th>...</th>\n",
+       "      <th>mfcc_sma_de[14]_peakRangeAbs</th>\n",
+       "      <th>mfcc_sma_de[14]_peakRangeRel</th>\n",
+       "      <th>mfcc_sma_de[14]_peakMeanAbs</th>\n",
+       "      <th>mfcc_sma_de[14]_peakMeanMeanDist</th>\n",
+       "      <th>mfcc_sma_de[14]_peakMeanRel</th>\n",
+       "      <th>mfcc_sma_de[14]_minRangeRel</th>\n",
+       "      <th>mfcc_sma_de[14]_meanRisingSlope</th>\n",
+       "      <th>mfcc_sma_de[14]_stddevRisingSlope</th>\n",
+       "      <th>mfcc_sma_de[14]_meanFallingSlope</th>\n",
+       "      <th>mfcc_sma_de[14]_stddevFallingSlope</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0 days</th>\n",
+       "      <th>0 days 00:00:02.500062499</th>\n",
+       "      <td>2.215135</td>\n",
+       "      <td>0.045267</td>\n",
+       "      <td>0.465021</td>\n",
+       "      <td>0.386327</td>\n",
+       "      <td>0.873205</td>\n",
+       "      <td>1.246398</td>\n",
+       "      <td>0.486878</td>\n",
+       "      <td>0.373194</td>\n",
+       "      <td>0.860071</td>\n",
+       "      <td>0.052187</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.217712</td>\n",
+       "      <td>0.519109</td>\n",
+       "      <td>3.307943</td>\n",
+       "      <td>3.284798</td>\n",
+       "      <td>19.712843</td>\n",
+       "      <td>0.537517</td>\n",
+       "      <td>131.112259</td>\n",
+       "      <td>65.691132</td>\n",
+       "      <td>130.39537</td>\n",
+       "      <td>85.175095</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 6373 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  audspec_lengthL1norm_sma_range  \\\n",
+       "start  end                                                         \n",
+       "0 days 0 days 00:00:02.500062499                        2.215135   \n",
+       "\n",
+       "                                  audspec_lengthL1norm_sma_maxPos  \\\n",
+       "start  end                                                          \n",
+       "0 days 0 days 00:00:02.500062499                         0.045267   \n",
+       "\n",
+       "                                  audspec_lengthL1norm_sma_minPos  \\\n",
+       "start  end                                                          \n",
+       "0 days 0 days 00:00:02.500062499                         0.465021   \n",
+       "\n",
+       "                                  audspec_lengthL1norm_sma_quartile1  \\\n",
+       "start  end                                                             \n",
+       "0 days 0 days 00:00:02.500062499                            0.386327   \n",
+       "\n",
+       "                                  audspec_lengthL1norm_sma_quartile2  \\\n",
+       "start  end                                                             \n",
+       "0 days 0 days 00:00:02.500062499                            0.873205   \n",
+       "\n",
+       "                                  audspec_lengthL1norm_sma_quartile3  \\\n",
+       "start  end                                                             \n",
+       "0 days 0 days 00:00:02.500062499                            1.246398   \n",
+       "\n",
+       "                                  audspec_lengthL1norm_sma_iqr1-2  \\\n",
+       "start  end                                                          \n",
+       "0 days 0 days 00:00:02.500062499                         0.486878   \n",
+       "\n",
+       "                                  audspec_lengthL1norm_sma_iqr2-3  \\\n",
+       "start  end                                                          \n",
+       "0 days 0 days 00:00:02.500062499                         0.373194   \n",
+       "\n",
+       "                                  audspec_lengthL1norm_sma_iqr1-3  \\\n",
+       "start  end                                                          \n",
+       "0 days 0 days 00:00:02.500062499                         0.860071   \n",
+       "\n",
+       "                                  audspec_lengthL1norm_sma_percentile1.0  ...  \\\n",
+       "start  end                                                                ...   \n",
+       "0 days 0 days 00:00:02.500062499                                0.052187  ...   \n",
+       "\n",
+       "                                  mfcc_sma_de[14]_peakRangeAbs  \\\n",
+       "start  end                                                       \n",
+       "0 days 0 days 00:00:02.500062499                      8.217712   \n",
+       "\n",
+       "                                  mfcc_sma_de[14]_peakRangeRel  \\\n",
+       "start  end                                                       \n",
+       "0 days 0 days 00:00:02.500062499                      0.519109   \n",
+       "\n",
+       "                                  mfcc_sma_de[14]_peakMeanAbs  \\\n",
+       "start  end                                                      \n",
+       "0 days 0 days 00:00:02.500062499                     3.307943   \n",
+       "\n",
+       "                                  mfcc_sma_de[14]_peakMeanMeanDist  \\\n",
+       "start  end                                                           \n",
+       "0 days 0 days 00:00:02.500062499                          3.284798   \n",
+       "\n",
+       "                                  mfcc_sma_de[14]_peakMeanRel  \\\n",
+       "start  end                                                      \n",
+       "0 days 0 days 00:00:02.500062499                    19.712843   \n",
+       "\n",
+       "                                  mfcc_sma_de[14]_minRangeRel  \\\n",
+       "start  end                                                      \n",
+       "0 days 0 days 00:00:02.500062499                     0.537517   \n",
+       "\n",
+       "                                  mfcc_sma_de[14]_meanRisingSlope  \\\n",
+       "start  end                                                          \n",
+       "0 days 0 days 00:00:02.500062499                       131.112259   \n",
+       "\n",
+       "                                  mfcc_sma_de[14]_stddevRisingSlope  \\\n",
+       "start  end                                                            \n",
+       "0 days 0 days 00:00:02.500062499                          65.691132   \n",
+       "\n",
+       "                                  mfcc_sma_de[14]_meanFallingSlope  \\\n",
+       "start  end                                                           \n",
+       "0 days 0 days 00:00:02.500062499                         130.39537   \n",
+       "\n",
+       "                                  mfcc_sma_de[14]_stddevFallingSlope  \n",
+       "start  end                                                            \n",
+       "0 days 0 days 00:00:02.500062499                           85.175095  \n",
+       "\n",
+       "[1 rows x 6373 columns]"
+      ]
+     },
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
