--- a/notebooks/Modelo - Investigando wav2vec2.ipynb
+++ b/notebooks/Modelo - Investigando wav2vec2.ipynb
@@ -13,35 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "ff81cd27",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\emanu\\Anaconda3\\envs\\SER\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "from transformers import Wav2Vec2Processor\n",
-    "from transformers.models.wav2vec2.modeling_wav2vec2 import (\n",
-    "    Wav2Vec2Model,\n",
-    "    Wav2Vec2PreTrainedModel,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "02d90ecb",
+   "execution_count": 4,
+   "id": "83b0b561",
    "metadata": {},
    "outputs": [
     {
@@ -63,54 +36,17 @@
     }
    ],
    "source": [
-    "class RegressionHead(nn.Module):\n",
-    "    r\"\"\"Classification head.\"\"\"\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from transformers import Wav2Vec2Processor\n",
+    "from transformers.models.wav2vec2.modeling_wav2vec2 import (\n",
+    "    Wav2Vec2Model,\n",
+    "    Wav2Vec2PreTrainedModel,\n",
+    ")\n",
     "\n",
-    "    def __init__(self, config):\n",
-    "\n",
-    "        super().__init__()\n",
-    "\n",
-    "        self.dense = nn.Linear(config.hidden_size, config.hidden_size)\n",
-    "        self.dropout = nn.Dropout(config.final_dropout)\n",
-    "        self.out_proj = nn.Linear(config.hidden_size, config.num_labels)\n",
-    "\n",
-    "    def forward(self, features, **kwargs):\n",
-    "\n",
-    "        x = features\n",
-    "        x = self.dropout(x)\n",
-    "        x = self.dense(x)\n",
-    "        x = torch.tanh(x)\n",
-    "        x = self.dropout(x)\n",
-    "        x = self.out_proj(x)\n",
-    "\n",
-    "        return x\n",
-    "\n",
-    "\n",
-    "class EmotionModel(Wav2Vec2PreTrainedModel):\n",
-    "    r\"\"\"Speech emotion classifier.\"\"\"\n",
-    "\n",
-    "    def __init__(self, config):\n",
-    "\n",
-    "        super().__init__(config)\n",
-    "\n",
-    "        self.config = config\n",
-    "        self.wav2vec2 = Wav2Vec2Model(config)\n",
-    "        self.classifier = RegressionHead(config)\n",
-    "        self.init_weights()\n",
-    "\n",
-    "    def forward(\n",
-    "            self,\n",
-    "            input_values,\n",
-    "    ):\n",
-    "\n",
-    "        outputs = self.wav2vec2(input_values)\n",
-    "        hidden_states = outputs[0]\n",
-    "        hidden_states = torch.mean(hidden_states, dim=1)\n",
-    "        logits = self.classifier(hidden_states)\n",
-    "\n",
-    "        return hidden_states, logits\n",
-    "\n",
-    "\n",
+    "from models.wav2vec2_v1 import EmotionModel, RegressionHead, process_func\n",
     "\n",
     "# load model from hub\n",
     "device = 'cpu'\n",
@@ -122,122 +58,14 @@
     "sampling_rate = 16000\n",
     "signal = np.zeros((1, sampling_rate), dtype=np.float32)\n",
     "\n",
-    "\n",
-    "def process_func(\n",
-    "    x: np.ndarray,\n",
-    "    sampling_rate: int,\n",
-    "    embeddings: bool = False,\n",
-    ") -> np.ndarray:\n",
-    "    r\"\"\"Predict emotions or extract embeddings from raw audio signal.\"\"\"\n",
-    "\n",
-    "    # run through processor to normalize signal\n",
-    "    # always returns a batch, so we just get the first entry\n",
-    "    # then we put it on the device\n",
-    "    y = processor(x, sampling_rate=sampling_rate)\n",
-    "    y = y['input_values'][0]\n",
-    "    y = y.reshape(1, -1)\n",
-    "    y = torch.from_numpy(y).to(device)\n",
-    "\n",
-    "    # run through model\n",
-    "    with torch.no_grad():\n",
-    "        y = model(y)[0 if embeddings else 1]\n",
-    "\n",
-    "    # convert to numpy\n",
-    "    y = y.detach().cpu().numpy()\n",
-    "\n",
-    "    return y\n",
-    "\n",
-    "\n",
-    "print(process_func(signal, sampling_rate))\n",
+    "print(process_func(signal, sampling_rate, model, processor))\n",
     "#  Arousal    dominance valence\n",
     "# [[0.5460754  0.6062266  0.40431657]]\n",
     "\n",
-    "print(process_func(signal, sampling_rate, embeddings=True))\n",
+    "print(process_func(signal, sampling_rate, model, processor, embeddings=True))\n",
     "# Pooled hidden states of last transformer layer\n",
     "# [[-0.00752167  0.0065819  -0.00746342 ...  0.00663632  0.00848748\n",
     "#    0.00599211]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "844a2235",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.dataload import load_audio_data, audio_select_mean_vote\n",
-    "from src.emotion_translation import ekman_emotion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "3c3235f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_annotations = pd.read_excel(\"data/annotations_2.xlsx\")\n",
-    "df_training_audios = pd.read_excel('data/training_audios.xlsx')\n",
-    "df_features_complete = pd.read_csv('data/classic_features_complete.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "5945de99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part_num = 1\n",
-    "audio_name = 'MSP-Conversation_0002.wav'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c756e327",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\emanu\\Documents\\GitHub\\mspconv_ftlab\\src\\dataload.py:83: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  time = pd.concat([time, temp_df], ignore_index = True)\n",
-      "C:\\Users\\emanu\\Documents\\GitHub\\mspconv_ftlab\\src\\dataload.py:86: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  df_pivot = df_pivot.fillna(method='ffill')\n",
-      "C:\\Users\\emanu\\Documents\\GitHub\\mspconv_ftlab\\src\\dataload.py:92: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  votation_means = pd.concat([votation_means, df_pivot.reset_index()])\n",
-      "C:\\Users\\emanu\\Documents\\GitHub\\mspconv_ftlab\\src\\dataload.py:83: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  time = pd.concat([time, temp_df], ignore_index = True)\n",
-      "C:\\Users\\emanu\\Documents\\GitHub\\mspconv_ftlab\\src\\dataload.py:86: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  df_pivot = df_pivot.fillna(method='ffill')\n",
-      "C:\\Users\\emanu\\Documents\\GitHub\\mspconv_ftlab\\src\\dataload.py:83: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  time = pd.concat([time, temp_df], ignore_index = True)\n",
-      "C:\\Users\\emanu\\Documents\\GitHub\\mspconv_ftlab\\src\\dataload.py:86: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  df_pivot = df_pivot.fillna(method='ffill')\n",
-      "C:\\Users\\emanu\\Documents\\GitHub\\mspconv_ftlab\\src\\dataload.py:95: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  df_emotions_vote = df_emotions_vote.fillna(method='ffill')\n",
-      "C:\\Users\\emanu\\AppData\\Local\\Temp\\ipykernel_24152\\2646748235.py:13: FutureWarning: DataFrame.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  df_train = df_train.fillna(method='ffill').fillna(method='bfill')\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Input data\n",
-    "data, timestamps, sr = load_audio_data(df_annotations, part_num = part_num, audio_name = audio_name)\n",
-    "df_input = pd.DataFrame(data = np.stack([timestamps, data]).T, columns = ['Time','Data'])\n",
-    "\n",
-    "# Labels\n",
-    "df_label = audio_select_mean_vote(df_annotations,  part_num = part_num, audio_name = audio_name)\n",
-    "df_label['Emotion'] = df_label.apply(lambda row : ekman_emotion(row['Valence'], row['Arousal'], row['Dominance']), axis = 1)\n",
-    "\n",
-    "# Merge\n",
-    "time_index = pd.concat([df_label['Time'],df_input['Time']], ignore_index = True).drop_duplicates().sort_values().reset_index(drop = True)\n",
-    "df_train = pd.merge(time_index, df_input, how = 'left', on = 'Time')\n",
-    "df_train = pd.merge(df_train, df_label, how = 'left', on = 'Time')\n",
-    "df_train = df_train.fillna(method='ffill').fillna(method='bfill')\n",
-    "df_train = df_train.set_index('Time').drop_duplicates().reset_index()"
    ]
   },
   {
@@ -824,6 +652,32 @@
     }
    ],
    "source": [
+    "from src.dataload import load_audio_data, audio_select_mean_vote\n",
+    "from src.emotion_translation import ekman_emotion\n",
+    "\n",
+    "df_annotations = pd.read_excel(\"data/annotations_2.xlsx\")\n",
+    "df_training_audios = pd.read_excel('data/training_audios.xlsx')\n",
+    "df_features_complete = pd.read_csv('data/classic_features_complete.csv')\n",
+    "\n",
+    "part_num = 1\n",
+    "audio_name = 'MSP-Conversation_0002.wav'\n",
+    "\n",
+    "# Input data\n",
+    "data, timestamps, sr = load_audio_data(df_annotations, part_num = part_num, audio_name = audio_name)\n",
+    "df_input = pd.DataFrame(data = np.stack([timestamps, data]).T, columns = ['Time','Data'])\n",
+    "\n",
+    "# Labels\n",
+    "df_label = audio_select_mean_vote(df_annotations,  part_num = part_num, audio_name = audio_name)\n",
+    "df_label['Emotion'] = df_label.apply(lambda row : ekman_emotion(row['Valence'], row['Arousal'], row['Dominance']), axis = 1)\n",
+    "\n",
+    "# Merge\n",
+    "time_index = pd.concat([df_label['Time'],df_input['Time']], ignore_index = True).drop_duplicates().sort_values().reset_index(drop = True)\n",
+    "df_train = pd.merge(time_index, df_input, how = 'left', on = 'Time')\n",
+    "df_train = pd.merge(df_train, df_label, how = 'left', on = 'Time')\n",
+    "df_train = df_train.fillna(method='ffill').fillna(method='bfill')\n",
+    "df_train = df_train.set_index('Time').drop_duplicates().reset_index()\n",
+    "\n",
+    "# Loop para computar el VAD existente vs el predicho usando ventana movil en un audio\n",
     "end = df_train.iloc[-1]['Time']\n",
     "frame_duration = 2.5\n",
     "step = 0.5\n",
@@ -852,7 +706,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_features = pd.DataFrame(X, columns = ['Arousal','Dominance','Valence'])"
+    "df_features = pd.DataFrame(X, columns = ['Arousal','Dominance','Valence'])\n",
+    "\n",
+    "df_features = (df_features - 0.5) * 100\n",
+    "\n",
+    "df_features_real = pd.DataFrame(Y, columns = ['Arousal_Real','Dominance_Real','Valence_Real','Emotion'])\n",
+    "\n",
+    "df_final = pd.concat([df_features, df_features_real],axis = 1)"
    ]
   },
   {
@@ -862,228 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_features = (df_features - 0.5) * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "f12aef8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_features_real = pd.DataFrame(Y, columns = ['Arousal_Real','Dominance_Real','Valence_Real','Emotion'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "7b150207",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_final = pd.concat([df_features, df_features_real],axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "c180af37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from src.metricas import ccc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "941468d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Arousal</th>\n",
-       "      <th>Dominance</th>\n",
-       "      <th>Valence</th>\n",
-       "      <th>Arousal_Real</th>\n",
-       "      <th>Dominance_Real</th>\n",
-       "      <th>Valence_Real</th>\n",
-       "      <th>Emotion</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>15.479374</td>\n",
-       "      <td>16.677416</td>\n",
-       "      <td>-3.381297</td>\n",
-       "      <td>23.030792</td>\n",
-       "      <td>19.139518</td>\n",
-       "      <td>18.282451</td>\n",
-       "      <td>surprise</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8.824801</td>\n",
-       "      <td>12.015867</td>\n",
-       "      <td>-0.924268</td>\n",
-       "      <td>29.637498</td>\n",
-       "      <td>23.773327</td>\n",
-       "      <td>24.622130</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5.294519</td>\n",
-       "      <td>7.849634</td>\n",
-       "      <td>2.317530</td>\n",
-       "      <td>32.978009</td>\n",
-       "      <td>26.895799</td>\n",
-       "      <td>29.594931</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>9.405905</td>\n",
-       "      <td>10.914696</td>\n",
-       "      <td>1.555467</td>\n",
-       "      <td>35.268256</td>\n",
-       "      <td>28.493258</td>\n",
-       "      <td>32.581644</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12.042046</td>\n",
-       "      <td>14.230526</td>\n",
-       "      <td>17.722923</td>\n",
-       "      <td>34.513128</td>\n",
-       "      <td>29.270606</td>\n",
-       "      <td>33.464845</td>\n",
-       "      <td>joy</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>559</th>\n",
-       "      <td>-10.457813</td>\n",
-       "      <td>-1.522979</td>\n",
-       "      <td>-7.543582</td>\n",
-       "      <td>33.889990</td>\n",
-       "      <td>9.368666</td>\n",
-       "      <td>37.532240</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>560</th>\n",
-       "      <td>-9.809235</td>\n",
-       "      <td>-1.416820</td>\n",
-       "      <td>3.928220</td>\n",
-       "      <td>34.801995</td>\n",
-       "      <td>8.064776</td>\n",
-       "      <td>36.970464</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>561</th>\n",
-       "      <td>-16.543251</td>\n",
-       "      <td>-8.957895</td>\n",
-       "      <td>-0.761151</td>\n",
-       "      <td>34.677230</td>\n",
-       "      <td>7.128171</td>\n",
-       "      <td>36.024064</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>562</th>\n",
-       "      <td>-17.047548</td>\n",
-       "      <td>-11.321795</td>\n",
-       "      <td>-1.300740</td>\n",
-       "      <td>33.882036</td>\n",
-       "      <td>7.074809</td>\n",
-       "      <td>35.892542</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>563</th>\n",
-       "      <td>-20.502222</td>\n",
-       "      <td>-16.857162</td>\n",
-       "      <td>-10.661591</td>\n",
-       "      <td>32.514354</td>\n",
-       "      <td>6.977645</td>\n",
-       "      <td>33.527930</td>\n",
-       "      <td>anger</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>564 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Arousal  Dominance    Valence  Arousal_Real  Dominance_Real  \\\n",
-       "0    15.479374  16.677416  -3.381297     23.030792       19.139518   \n",
-       "1     8.824801  12.015867  -0.924268     29.637498       23.773327   \n",
-       "2     5.294519   7.849634   2.317530     32.978009       26.895799   \n",
-       "3     9.405905  10.914696   1.555467     35.268256       28.493258   \n",
-       "4    12.042046  14.230526  17.722923     34.513128       29.270606   \n",
-       "..         ...        ...        ...           ...             ...   \n",
-       "559 -10.457813  -1.522979  -7.543582     33.889990        9.368666   \n",
-       "560  -9.809235  -1.416820   3.928220     34.801995        8.064776   \n",
-       "561 -16.543251  -8.957895  -0.761151     34.677230        7.128171   \n",
-       "562 -17.047548 -11.321795  -1.300740     33.882036        7.074809   \n",
-       "563 -20.502222 -16.857162 -10.661591     32.514354        6.977645   \n",
-       "\n",
-       "     Valence_Real   Emotion  \n",
-       "0       18.282451  surprise  \n",
-       "1       24.622130       joy  \n",
-       "2       29.594931       joy  \n",
-       "3       32.581644       joy  \n",
-       "4       33.464845       joy  \n",
-       "..            ...       ...  \n",
-       "559     37.532240     anger  \n",
-       "560     36.970464     anger  \n",
-       "561     36.024064     anger  \n",
-       "562     35.892542     anger  \n",
-       "563     33.527930     anger  \n",
-       "\n",
-       "[564 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_final"
    ]
   },
   {
