--- a/notebooks/Annotation - Mean Value (Every Emotion).ipynb
+++ b/notebooks/Annotation - Mean Value (Every Emotion).ipynb
@@ -22,19 +22,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PC_Num, Part_Num = 1540, 1\n",
-    "df_annotations = pd.read_excel(f'data/annotations_2.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "1f3de4b6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from src.dataload import audio_select_mean_vote\n",
     "\n",
+    "PC_Num, Part_Num = 1540, 1\n",
+    "df_annotations = pd.read_excel(f'data/annotations_2.xlsx')\n",
     "df = audio_select_mean_vote(df_annotations, PC_Num, Part_Num)"
    ]
   },
