--- a/notebooks/File - annotations_2.ipynb
+++ b/notebooks/File - annotations_2.ipynb
@@ -95,13 +95,135 @@
    "source": [
     "df_annotations_2.to_excel('annotations_2.xlsx', index = False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c031920",
+   "metadata": {},
+   "source": [
+    "Time Fix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b23cb0e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Carga del archivo directorio con datos necesarios\n",
+    "df_annotations = pd.read_excel(\"data/annotations.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3cb3a120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/MSPCORPUS/Time_Labels/conversation_parts.txt') as f:\n",
+    "    data_file = f.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2c324f2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_data_file = pd.DataFrame(data_file,columns = ['Name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "87fd54fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_data_file['start'] = df_data_file['Name'].str.split(';').str[1]\n",
+    "df_data_file['end'] = df_data_file['Name'].str.split(';').str[2]\n",
+    "df_data_file['Name'] = df_data_file['Name'].str.split(';').str[0]\n",
+    "df_data_file['end'] = df_data_file['end'].str.replace('\\n','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "eb6c6c21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_annotations = df_annotations.drop(['start_time','end_time'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "ad24f07e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_annotations = pd.merge(df_annotations,df_data_file, how = 'left' , left_on = df_annotations['Name'].str[:23], right_on = 'Name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5648880c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_annotations = df_annotations.drop(['Name','Name_y'], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "eb603c13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_annotations = df_annotations.rename({'Name_x':'Name'}, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "a7ca2fb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_annotations = df_annotations.rename({'start':'start_time','end':'end_time'}, axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "a9f1a566",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_annotations.to_excel('data/annotations.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb5e6f3c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
-   "display_name": "test2",
+   "display_name": "SER",
    "language": "python",
-   "name": "test2"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -113,7 +235,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.16"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
